--- a/app/assets/javascripts/templates/home.html
+++ b/app/assets/javascripts/templates/home.html
@@ -1,5 +1,5 @@
 <div ng-include="'navbar.html'"></div>
+<flash-message></flash-message>
 <div class="container">
-  <mc-messages></mc-messages>
   <ui-view></ui-view>
 </div>
