--- a/app/assets/javascripts/templates/messages.html
+++ b/app/assets/javascripts/templates/messages.html
@@ -2,3 +2,4 @@
 <p ng-message="minlength">This field is too short</p>
 <p ng-message="maxlength">This field is too long</p>
 <p ng-message="email">This needs to be a valid email</p>
+<p ng-message="min">Please enter an amount greater than or equal to zero.</p>
