--- a/app/assets/javascripts/templates/auth/login.html
+++ b/app/assets/javascripts/templates/auth/login.html
@@ -4,7 +4,7 @@
       <h1>Log In</h1>
         <form ng-submit="login()">
           <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
+            <input type="email" class="form-control" placeholder="Email" ng-model="user.email" autofocus>
           </div>
           <div class="form-group">
             <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
