--- a/app/assets/javascripts/templates/auth/register.html
+++ b/app/assets/javascripts/templates/auth/register.html
@@ -4,7 +4,7 @@
       <h1>Register</h1>
         <form ng-submit="register()">
           <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
+            <input type="email" class="form-control" placeholder="Email" ng-model="user.email" autofocus>
           </div>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Username" ng-model="user.username">
