--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -27,12 +27,6 @@ ul.navbar-nav li a:focus,
     color:#fff;
 }
 
-@media (min-width: 767px) {
-  .fixed-panel {
-    min-height: 250px;
-  }
-}
-
 .shape {
   text-align:left;
   font-size: 20px;
@@ -54,10 +48,41 @@ ul.navbar-nav li a:focus,
   top:0px;
 }
 
-.beach-votes {
-  float: right;
-}
-
 textarea {
     resize: none;
+}
+
+div.list-group-item {
+    height:auto;
+    min-height:220px;
+}
+div.list-group-item.active small {
+    color:#fff;
+}
+
+.well.blue-well {
+    background-color: #3cabe7;
+}
+
+.post-comments {
+  margin: 5px 0 5px;
+}
+
+.post-comments .media {
+  border-bottom: 1px dotted #000;
+  margin-bottom: 5px;
+  padding-left: 10px;
+}
+
+.post-comments .media-heading {
+  font-size: 12px;
+  color: grey;
+  margin-top: 10px;
+}
+
+.post-comments .comment-meta a {
+  font-size: 12px;
+  color: grey;
+  font-weight: bolder;
+  margin-right: 5px;
 }
