--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,7 +10,7 @@ ul.navbar-nav li a:hover,
 ul.navbar-nav li a:focus,
 .navbar-nav a:hover,
 .navbar-nav a:focus {
-  background-color: #1adfdf; 
+  background-color: #62BCED; 
 }
 
 .navbar-custom {
@@ -25,27 +25,6 @@ ul.navbar-nav li a:focus,
 
 .navbar-custom .navbar-brand {
     color:#fff;
-}
-
-.shape {
-  text-align:left;
-  font-size: 20px;
-  background-color: #27C2CA;
-  height:60px;
-  color:white;
-  margin:20px auto;
-  position:relative;
-}
-
-.shape:before {
-  content:"";
-  width:0px;
-  height:0px;
-  border-top:60px solid #27C2CA;
-  border-left:60px solid transparent;
-  position:absolute;
-  right:100%;
-  top:0px;
 }
 
 textarea {
@@ -95,3 +74,7 @@ div.list-group-item.active small {
     border-bottom: 1px dotted #ccc;
 }
 
+.jumbotron.blue {
+  background-color: #91D1F4;
+  color: #fff;
+}
