--- a/app/assets/javascripts/templates/comments/comment.html
+++ b/app/assets/javascripts/templates/comments/comment.html
@@ -4,10 +4,10 @@
     <p class="pull-right"><small>{{ comment.score }} votes</small></p>
     <div class="media-left">
       <div class="vote-wrap">
-        <div ng-click="upvote(beach, comment)" class="vote up">
+        <div ng-click="upvoteComment(beach, comment)" class="vote up">
           <i class="glyphicon glyphicon-menu-up"></i>
         </div>
-        <div ng-click="downvote(beach, comment)" class="vote inactive">
+        <div ng-click="downvoteComment(beach, comment)" class="vote inactive">
           <i class="glyphicon glyphicon-menu-down"></i>
         </div>
       </div>
