--- a/app/assets/javascripts/templates/comments/indexcomment.html
+++ b/app/assets/javascripts/templates/comments/indexcomment.html
@@ -8,10 +8,10 @@
 
         <div class="media-left">
           <div class="vote-wrap">
-            <div ng-click="upvote(beach, comment)" class="vote up">
+            <div ng-click="upvoteComment(beach, comment)" class="vote up">
               <i class="glyphicon glyphicon-menu-up"></i>
             </div>
-            <div ng-click="downvote(beach, comment)" class="vote inactive">
+            <div ng-click="downvoteComment(beach, comment)" class="vote inactive">
               <i class="glyphicon glyphicon-menu-down"></i>
             </div>
           </div>
