update README, minor changes to beach index and show pages

--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -12,7 +12,7 @@
     <div class="col-sm-2">
       <input type="text" ng-model="search.state" class="form-control" id="state" placeholder="By State">
     </div>
-  <button ng-click="searchCollapse = !searchCollapse" class="btn btn-primary">More</button>
+  <button ng-click="searchCollapse = !searchCollapse" class="btn btn-primary">Filters</button>
   </div>
 </div>
 
