add page for user to view uploaded images and delete them

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -86,3 +86,8 @@ div.list-group-item.active small {
 .page-header.beach {
   margin: 40px 0 10px;
 }
+
+.image-delete-button {
+  margin-left: 190px;
+  margin-top: 3px;
+}
