--- a/app/assets/javascripts/templates/comments/indexcomment.html
+++ b/app/assets/javascripts/templates/comments/indexcomment.html
@@ -3,7 +3,7 @@
     <div class="media col-md-12">
 
       <div class="media-heading">
-        <span class="label label-info">{{ comment.score }}</span> {{ commentor.username }}
+        <span class="label label-info">{{ comment.score }}</span> {{ comment.user.username }}
       </div>
 
         <div class="media-left">
