--- a/app/assets/javascripts/templates/images/index.html
+++ b/app/assets/javascripts/templates/images/index.html
@@ -4,7 +4,7 @@
       <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
         <a class="thumbnail fancybox" rel="ligthbox">
           <img ng-src="{{ image.img }}">
-          <beachname image="image"></beachname>
+          {{ image.beach.name }}
           <button ng-click="ctrl.deleteImage(image)" class="btn btn-sm btn-info image-delete-button">Delete</button>
         </a>
       </div>
