--- a/app/assets/javascripts/templates/images/index.html
+++ b/app/assets/javascripts/templates/images/index.html
@@ -1,12 +1,15 @@
+<h2 class="page-header">Your Uploads</h2>
 <div class="row">
   <div class='list-group gallery'>
     <div ng-repeat="image in ctrl.images">
       <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-        <a class="thumbnail fancybox" rel="ligthbox">
-          <img ng-src="{{ image.img }}">
-          {{ image.beach.name }}
-          <button ng-click="ctrl.deleteImage(image)" class="btn btn-sm btn-info image-delete-button">Delete</button>
-        </a>
+        <div class="thumbnail fancybox" rel="ligthbox">
+          <img ng-src="{{ image.img }}" class="img-responsive">
+          <div class='text-right'>
+              <small class='text-muted'>{{ image.beach.name }}</small>
+              <button ng-click="ctrl.deleteImage(image)" class="btn btn-xs btn-info image-delete-button">Delete</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
