add maps to show user visited and not visited beaches

--- a/app/assets/javascripts/templates/beaches/_form.html
+++ b/app/assets/javascripts/templates/beaches/_form.html
@@ -18,7 +18,7 @@
 <div class="form-group">
   <label for="address" class="col-sm-1 control-label">Address</label>
   <div class="col-sm-11">
-    <input type="text" ng-model="ctrl.beach.address" class="form-control" id="address" placeholder="Street Address">
+    <input type="text" ng-model="ctrl.beach.address" class="form-control" id="address" placeholder="Street Address" required>
   </div>
 </div>
 
@@ -40,7 +40,7 @@
   </div>
   <label for="zip" class="col-sm-1 control-label">Zip Code</label>
   <div class="col-sm-3">
-    <input type="text" ng-model="ctrl.beach.zip" class="form-control" id="zip" placeholder="Zip Code">
+    <input type="text" ng-model="ctrl.beach.zip" class="form-control" id="zip" placeholder="Zip Code" required>
   </div>
 </div>
 
