--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -67,7 +67,7 @@
           <div class="col-md-4 text-center">
             <h2> {{ beach.score }} <small> votes </small></h2>
             <button ng-click="ctrl.upvoteBeach(beach)" class="btn btn-primary">+</button>
-            <button ng-click="ctrl.downvoteBeach(beach)" class="btn btn-primary">&ndash;</button>
+            <button ng-click="ctrl.downvoteBeach(beach)" class="btn btn-primary">&ndash;</button><br><br>
           </div>
 
           <div uib-collapse="!isCollapsed">
