--- a/app/assets/javascripts/templates/home.html
+++ b/app/assets/javascripts/templates/home.html
@@ -3,7 +3,7 @@
 <div class="container">
 
   <div class="jumbotron blue" ng-show="ctrl.home()">
-    <h1>Beaches</h1>
+    <h1>SeaSpot</h1>
     <p ng-hide="ctrl.signedIn()">Please <a ui-sref="home.register">register</a> or <a ui-sref="home.login">log in</a> to find some beautiful beaches</p>
   </div>
 
