--- a/app/assets/javascripts/templates/navbar.html
+++ b/app/assets/javascripts/templates/navbar.html
@@ -7,11 +7,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand visible-xs">Beaches</a>
+      <a class="navbar-brand visible-xs">SeaSpot</a>
     </div>
     <div class="hidden-xs">
       <ul class="nav nav-pills navbar-nav">
-        <a class="navbar-brand" href="#">Beaches</a>
+        <a class="navbar-brand" href="#">SeaSpot</a>
         <li ng-hide="signedIn()" ><a href="#/login">Log In</a></li>
         <li ng-hide="signedIn()" ui-sref-active="active"><a href="#/register">Register</a></li>
         <li ng-show="signedIn()" ui-sref-active="active"><a href="#/beaches">All Beaches</a></li>
